[package]
name = "serde-tuple-vec-map"
# Remember to update html_root_url in src/lib.rs with each version.
version = "0.2.1"
authors = ["David Ross <daboross@daboross.net>"]
description = "Deserialize a serialized map to Vec<(K, V)> using serde"

documentation = "https://docs.rs/tuple-vec-map/"
repository = "https://github.com/daboross/serde-tuple-vec-map/"
readme = "README.md"

license = "MIT"
keywords = ["serde", "vec", "hashmap"]
categories = ["encoding"]

include = ["Cargo.toml", "src/**/*", "tests/**/*", "examples/**/*", "LICENSE", "README.md"]

[lib]
name = "tuple_vec_map"
path = "src/lib.rs"

[features]
std = []
default = ["std"]

[badges]
travis-ci = { repository = "daboross/serde-tuple-vec-map" }

[dependencies]
serde = { version = "1.0", default-features = false }

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
